# optimus-payment-gateway

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
admin/: __init__.py  app.py
admin/static/: style.css
admin/templates/: base.html  dashboard.html  order_detail.html  orders.html  setup.html
docs/: ADDRESS_POOL.md  API.md  ARCHITECTURE.md  BINANCE.md  CHAINS.md  DEPLOYMENT.md  ELECTRUM_LTC.md  INTEGRATION.md  LITECOIN.md  SECURITY.md  XPUB_GUIDE.md
examples/: binance_manual_check.py  curl_examples.sh  flask_shop.py  telegram_bot.py
optimus_gateway/: __init__.py  __main__.py  binance.py  chains.py  config.py  db.py  evm.py  gateway.py  hdwallet.py  ltc.py  security.py  sweeper.py  ton.py  watcher.py  webhook.py
server/: __init__.py  app.py  workers.py
tests/: test_address_pool.py  test_binance.py  test_evm_logs.py  test_fake_token.py  test_hdwallet.py  test_ledger.py  test_ltc.py  test_security.py  test_ssrf_and_auth.py  test_watcher_catchup.py  test_wrongnet_recovery.py
